refactor: upgrade hutool version (#9499)
@coderabbitai: ignore